--- a/assets3/css_old/global.css
+++ b/assets3/css_old/global.css
@@ -39,7 +39,9 @@ form:last-child{
     background-attachment: fixed;
     overflow: hidden;
 }
-
+.full-bg:not(.no-filter){
+    filter: grayscale(1);
+}
 .full-bg > #content {
     width: 100%;
     height: 100%;
@@ -97,14 +99,14 @@ a.kotak{
     transition: all 0.4s ease-in-out;
 }
 .kotak img {
-    height: 150px;
+    height: 75px;
 }
 .kotak h4 {
     font-size: 22px;
     font-weight: bold;
 }
 .kotak:hover{
-    transform: scale(1.5);
+    transform: scale(1.3);
 }
 .kotak:hover i{
     animation: loncat 0.5s infinite;
