--- a/assets3/css_old/global2.css
+++ b/assets3/css_old/global2.css
@@ -39,7 +39,9 @@ form:last-child{
     background-attachment: fixed;
     overflow: hidden;
 }
-
+.full-bg:not(.no-filter){
+    filter: grayscale(1);
+}
 .full-bg > #content {
     width: 100%;
     height: 100%;
@@ -97,14 +99,14 @@ a.kotak{
     transition: all 0.4s ease-in-out;
 }
 .kotak img {
-    height: 150px;
+    height: 75px;
 }
 .kotak h4 {
     font-size: 22px;
     font-weight: bold;
 }
 .kotak:hover{
-    transform: scale(1.5);
+    transform: scale(1.3);
 }
 .kotak:hover i{
     animation: loncat 0.5s infinite;
@@ -673,9 +675,6 @@ a.kotak{
 .download-button a:hover {
     background: #df541d;
 }
-.download-button a.pdf-read {
-    background: #4285f4;
-}
 #home-result > .table-result th {
     background: #FF5722;
     padding: 5px 10px;
@@ -993,50 +992,6 @@ ul.nav-account-menus:before {
     position: absolute;
     top: -13px;
     right: 3px;
-}
-#pdf-modal .modal-header h3 {
-    font-size: 24px;
-    margin: 0 0 15px 0;
-    border-bottom: 2px solid #eee;
-    padding-bottom: 10px;
-}
-#pdf-modal iframe {
-    width: 100%;
-    min-height: 500px;
-    border: 0px;
-}
-#pdf-modal {
-    position: absolute;
-    top: 30px;
-    left: 0;
-    right: 0;
-    max-width: 900px;
-    margin: 0 auto;
-    background: #fff;
-    padding: 20px;
-    z-index: 9999;
-    margin-bottom: 20px;
-}
-body.disabled{
-    overflow: hidden;
-}
-body.disabled .black-bg {
-    /* content: " "; */
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    background:rgba(0,0,0,0.8);
-    overflow: auto;
-    z-index: 999;
-}
-label.modal-close-button {
-    font-size: 35px;
-    position: absolute;
-    top: 4px;
-    right: 18px;
-    cursor: pointer;
 }
 
 @keyframes loncat{
